@@ -1,3 +1,8 @@
+2009-01-10  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: Implement --no-debug: silently accept file, if its
+	debug info is not available.
+
 2009-01-10  Roland McGrath  <roland@redhat.com>
 
 	* dwarfcmp.cc: New file.
